Attempted fix for worldClock layer overflow

--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,6 @@ body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
     color: #1a1a1a;
-    /* test */
-    overflow: hidden;
 }
 
 .preload * {
@@ -96,8 +94,9 @@ a:focus, button:focus, input:focus, textarea:focus {
     height: 100%;
     background-color: #a1c6f7;
     overflow-y: scroll;
-    border-radius: 2rem 2rem 0 0;
-    transition: margin-bottom 0.3s ease 0s;
+    border-radius: 1rem 1rem 0 0;
+    /* transition: margin-bottom 0.3s ease 0s; */
+    transition: margin-bottom 1.5s ease 0s;
     box-shadow: 
     0 11px 15px #00000033,
     0 24px 38px #00000024,
@@ -126,23 +125,32 @@ a:focus, button:focus, input:focus, textarea:focus {
     display: flex;
     justify-content: center;
     background-color: #a1c6f7;
-    border-bottom: 1px solid #00000066;
-    border-radius: 2rem 2rem 0 0;
+    border-radius: 1rem 1rem 0 0;
     z-index: 1;
     transition: box-shadow 0.1s ease 0s;
+}
+
+#timezone-layer-head {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    border-bottom: 1px solid #00000066;
 }
 
 .layer-heading {
     font-weight: 500;
 }
 
-.edit-head {
+.layer-content {
+    background-color: #a1c6f7;
+}
+
+/* .edit-head {
     position: relative;
     box-shadow: none;
     border: none;
-}
-
-.edit-head .add-alarm-done ~ 
+} */
 
 #alarm-add-btn {
     filter: invert(36%) sepia(64%) saturate(7316%) hue-rotate(209deg) brightness(105%) contrast(84%);
@@ -582,6 +590,28 @@ input[type="number"] {
 }
 
 @media screen and (min-width: 640px) {
+    *::-webkit-scrollbar {
+        width: 0.5rem;
+        height: 0.5rem;
+    }
+    
+    * {
+        scrollbar-width: thin;
+        scrollbar-color: #747c8b66;
+    }
+    
+    *::-webkit-scrollbar-thumb {
+        background: #00000099;
+        border-radius: 9999px;
+        width: 320px;
+        height: 320px;
+    }
+    
+    *::-webkit-scrollbar-track {
+        background:  #ffffff00;
+        border-radius: 9999px;
+    }
+
     #main-content-area, .layer-view {
         grid-template-columns: repeat(8, 1fr);
     }
